<resources>

    <string name="app_name">Onix Streamer Demo</string>

    <!--common-->
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="continue_button">Continue</string>
    <string name="simple_activity_example">Simple activity example</string>
    <string name="simple_fragment_example">Simple fragment example</string>
    <string name="custom_settings_example">Custom settings example</string>
    <string name="gopro_example">Gopro example</string>
    <string name="screen_activity_example">Screen activity example</string>
    <string name="screen_fragment_example">Screen fragment example</string>
    <string name="preparing">Preparing…</string>

    <!--errors-->
    <string name="error_networks">Can\'t find networks. Please enable mobile network and connect to action camera via WIFI.</string>
    <string name="error_camera">Cannot start camera preview. Check you action camera</string>
    <string name="error_permissions">Missing permissions</string>
    <string name="error_server">Server error</string>
    <string name="error_connection">Connection Error</string>
    <string name="error_display_not_found">Display capture error</string>

    <!--alerts-->
    <string name="recording">Screen recording...</string>
    <string name="alert_permissions">Please allow permissions</string>
    <string name="alert_permissions_denied_message">We are sorry, but app can\'t broadcasting without requested permissions</string>
    <string name="alert_multiple_networks">Please, make sure you are connected to action cam via wifi. Enable mobile network for internet connection as well</string>
    <string name="alert_network_with_internet_connection">Please, make sure your current network connection has internet access</string>
    <string name="alert_empty_url">Empty url</string>
    <string name="hint_rtmp_url">Server url</string>

    <!--settings-->
    <string name="video_bitrate">Video bitrate</string>
    <string name="audio_bitrate">Audio bitrate</string>
    <string name="video_preset">Video preset</string>
    <string name="preview_size">Preview size</string>
    <string name="audio">Audio</string>
    <string name="video_codec_mode">Video codec mode</string>
    <string name="fps_pattern" formatted="false">fps: %d</string>
    <string name="preview_size_pattern" formatted="false">%d x %d</string>

</resources>
