<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.os.Build" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/serverUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_rtmp_url"
                    android:inputType="textUri" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activityExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_activity_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_fragment_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/customExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_settings_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/screenActivityExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{android.os.Build.VERSION.SDK_INT &gt;= Build.VERSION_CODES.LOLLIPOP}"
                    android:text="@string/screen_activity_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/screenFragmentExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{android.os.Build.VERSION.SDK_INT &gt;= Build.VERSION_CODES.LOLLIPOP}"
                    android:text="@string/screen_fragment_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/goproExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{android.os.Build.VERSION.SDK_INT &gt;= Build.VERSION_CODES.LOLLIPOP}"
                    android:text="@string/gopro_example" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/onix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>